Removed Logo Icon

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="container">
         <nav>
             <ul>
-                <li><a href="#" class="logo"><i class="fa-solid fa-heading"></i><span>Dashboard</span></a></li>
+                <li><a href="#" class="logo"><span>Dashboard</span></a></li>
                 <li><a href="#"><i class="fa-solid fa-user"></i><span class="nav-item">Profiles</span></a></li>
                 <li><a href="#"><i class="fa-solid fa-wallet"></i><span class="nav-item">Videos</span></a></li>
                 <li><a href="#"><i class="fa-solid fa-chart-bar"></i><span class="nav-item">Hot Topic</span></a></li>
-                <li><a href="#"><i class="fa-solid fa-messages"></i><span class="nav-item">Messages</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-message"></i><span class="nav-item">Messages</span></a></li>
                 <li><a href="#"><i class="fa-solid fa-address-book"></i></i><span class="nav-item">Communities</span></a></li>
                 <li><a href="#"><i class="fa-solid fa-clock"></i><span class="nav-item">History</span></a></li>
             </ul>
