--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 <li><a href="#"><i class="fa-solid fa-clock"></i><span class="nav-item">History</span></a></li>
             </ul>
         </nav>
+        <section class="main">
+            <div class="main-top">
+                <h1>Trending</h1>
+                <i class="fa-solid fa-user-gear"></i>
+            </div>
+        </section>
     </div>
 
 
