--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
                 <h1>Trending</h1>
                 <i class="fa-solid fa-user-gear"></i>
             </div>
+            <div class="main-body">
+                <div class="main-content">
+                    <div class="cardbox">
+                        <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Hotel">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore error rem ea possimus sapiente voluptatem, ipsum alias aut similique voluptatum, nulla ab, praesentium architecto ad molestiae! At mollitia consequatur cupiditate!</p>
+                    </div>
+                    <div class="cardbox">
+                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Scenery">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium cumque dolorum nam libero neque nemo omnis, inventore ut possimus et fugit iusto illo, non dignissimos debitis veniam sed quo facere!</p>
+                    </div>
+                    <div class="cardbox">
+                        <img src="https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=850&q=80" alt="Space">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nisi aliquid iusto ut repellat, quam sequi porro unde eligendi nostrum iure sunt aspernatur laborum ipsa at a labore animi ratione!</p>
+                    </div>
+                    <div class="cardbox">
+                        <img src="https://images.unsplash.com/photo-1531114297032-fef035025fe7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Amusement Park Ride">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolorem odio perferendis porro commodi accusantium unde cum iste dolores ex repellendus non recusandae, esse eligendi culpa sit tenetur sunt ratione.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 
